kubernetes/kustomizations/blog/middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: blog-redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
