kubernetes/kustomizations/blog/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  annotations:
    argocd.argoproj.io/sync-options: Delete=false,Prune=false
