kubernetes/kustomizations/blog/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zmuda-pro-blog-netpol
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - podSelector:
            matchLabels:
              type: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kgateway-system
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
